kubernetes/base/mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: mqtts
      port: 8883
      targetPort: 8883
      protocol: TCP
